Increase permgen space for surefire